sandbox-codebase/objects/heymarket__Job__c/heymarket__Job__c.object-meta.xml
<CustomObject>
    <description>It will store the details of all sync details</description>
    <label>Heymarket Sync Job</label>
    <nameField>
        <displayFormat>JOB-{000000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>