sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Context__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Context__c</fullName>
    <description>Any additional state/context associated with the job, like &quot;S2H&quot;, &quot;H2S&quot;</description>
    <label>Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>