sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Created__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Created__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of records created in the Job</description>
    <label>Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>