sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Deleted__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Deleted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of records deleted in the job</description>
    <label>Deleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>