sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Inbox__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Inbox__c</fullName>
    <description>Inbox Id if sync run as per inbox else All</description>
    <label>Inbox Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>