sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Job_Id__c</fullName>
    <description>Id of external job, which could be an Async Apex or Scheduled or Queuable, or any Job Id. This will be used for relating this job with debug logs.</description>
    <externalId>true</externalId>
    <label>Batch Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>