sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Last_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Last_Sync_Time__c</fullName>
    <description>Timestamp of last record fetched, should be meaningful only when the job completes with success.</description>
    <label>Last Sync Time</label>
    <type>DateTime</type>
</CustomField>