sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Records_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of records processed in this job</description>
    <inlineHelpText>Number of records processed in this job</inlineHelpText>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>