sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__SObject_Type__c</fullName>
    <description>Contact, Lead</description>
    <label>SObject Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>