sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Status__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Status__c</fullName>
    <description>Queued, Started, In Progress, Completed, Failed</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>