sandbox-codebase/objects/heymarket__Job__c/fields/heymarket__Updated__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Updated__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of records updated in the Job</description>
    <label>Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>