sandbox-codebase/objects/heymarket__Job__c/listViews/heymarket__All.listView-meta.xml
<ListView>
    <fullName>heymarket__All</fullName>
    <columns>NAME</columns>
    <columns>heymarket__Job_Id__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>heymarket__SObject_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>